# git-shadow

./: Cargo.toml  LICENSE  README.md
src/: arguments.rs  error.rs  git.rs  lib.rs  logging.rs
