[package]
name = "git-shadow"
version = "0.1.0"
edition = "2018"
authors = ["MuZhou233 <muzhou233@outlook.com>"]
description = "A command line tool that helps you ignore/restore files locally in git repository"
repository = "https://github.com/muzhou233/git-shadow"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
structopt = "0.3"
crossterm = "0.21"
anyhow = "1.0"
git2 = "0.13"
log = "0.4.14"
npath = { git = "https://github.com/MuZhou233/npath" }

[lib]
name = "git_shadow"
path = "src/lib.rs"

[[bin]]
name = "git-shadow"
path = "src/bin/main.rs"